--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </head>
     
     <body>
+         <div class="container">
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
@@ -73,5 +74,6 @@
             </div>
             <div class="col-sm-1"></div> 
         </div> 
+        </div>
     </body>
  </html>
