--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <h1>Amazon Reviews - Big Data ETL and ML</h1>
             <h4>
-               We used two big Data Sets from Amazon customer review data sets. The data were extracted , transformed 
+               I used two big Data Sets from Amazon customer review data sets. The data were extracted , transformed 
                and loaded to Amazon Relational Database Service (RDS). Also a ML model was created to predict the user ratings 
                based on the reviews. 
                 <hr style="height:2px;border-width:0;color:gold;background-color:gold">
